# bd-labelmaker

./: README.md  pyproject.toml
labelmaker_app/: admin.py  apps.py  models.py
labelmaker_app/labelmaker_ext/: __init__.py  cog.py
labelmaker_app/migrations/: 0001_initial.py  0002_label_ephemeral_alter_label_style.py
