[project]
name = "bd-labelmaker"
version = "1.0.0"

dependencies = [ ]

description = "Monkeypatch BallSpawnView for fun and profit"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "dormieriancitizen" }
]
readme = "README.md"

[project.urls]
Homepage="https://github.com/dormieriancitizen/bd-labelmaker"
