[project]
name = "labelmaker_app"
version = "1.0.0"

dependencies = [ ]

description = "Monkeypatch BallSpawnView for fun and profit"
license = "MIT"
license-files = ["LICENSE"]

authors = [ { name = "dormieriancitizen", email = "foo@bar.com"} ]
readme = "README.md"

[project.urls]
homepage="https://github.com/dormieriancitizen/bd-labelmaker"
